reformat using intellij google java style plugin